# pet-hotel

./: .ignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.7B94A6623D2A5C11.idx
data/: hotel.json
include/: animal.h  app_state.h  cat.h  client_choice_page.h  client_page.h  dog.h  employee_page.h  highlighted_toggle.h  kennel.h  kennels_page.h  main_menu_page.h  pet_list_page.h  pethotel.h  reservation.h  reservations_page.h  rodent.h
lib/: animal.cpp  cat.cpp  client_choice_page.cpp  client_page.cpp  dog.cpp  employee_page.cpp  highlighted_toggle.cpp  kennel.cpp  kennels_page.cpp  main_menu_page.cpp  pet_list_page.cpp  pethotel.cpp  reservation.cpp  reservations_page.cpp  rodent.cpp
src/: main.cpp
